--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "echoWee",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Generic HTTP client",
   "main": "teaEcho/teaEcho.js",
   "author": "Andreas Lind @papandreou <andreas@one.com>",
   "license": "BSD-3-Clause",
-  "repository": "https://github.com/echoWee/teaEcho",
+  "repository": "https://github.com/echoWee/echoWee",
   "scripts": {
     "lint": "eslint . && prettier --check '**/*.js'",
     "test": "mocha",
